siduxcc (0.6.2) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Fabian Wuertz ]
  * de-typos fixed
  * icons: Makefile.am fixed
  * kernel: load problem solved
  * uint problem solved
  * kernel: currentKernelTextLabel & messageTextLabel added 

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 26 Oct 2007 16:58:37 +0200

siduxcc (0.6.1) unstable; urgency=low

  * po: languages files fixed
  * po: some small fixes
  * common folder removed
  * typo 

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 26 Oct 2007 00:22:47 +0200

siduxcc (0.6.0) unstable; urgency=low

  [ Fabian Wuertz ]
  * siduxcc: display: gfx-function added
  * siduxcc: software: clean-function added
  * KCONTROL-UIS --> KDE-UI

  [ Stefan Lippers-Hollmann ]
  * remove execautable bit from simple images.
  * fix icon target, relibtoolize.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 25 Oct 2007 20:47:14 +0200

siduxcc (0.5.12) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * update syntax for Vcs headers in debian/control

  [ Fabian Wuertz ]
  * siduxcc_network: new design
  * siduxcc_network: fwdetect added
  * nicstatus: running/not_running argument added

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 21 Oct 2007 22:25:03 +0200

siduxcc (0.5.11) unstable; urgency=low

  * siduxcc_network: nameservers function added
  * *.desktop: translations added

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 04 Oct 2007 21:48:01 +0200

siduxcc (0.5.10) unstable; urgency=low

  * po: Makefile.in: remove *.gmo by distclean
  * po: Makefile.am: remove *.gmo by clean
  * po: po files for all languages updated
  * siduxcc_software: metapackages typo fixed 

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 04 Oct 2007 16:53:28 +0200

siduxcc (0.5.9) unstable; urgency=low

  * menu: siduxcc --> sidux Control Center
  * icons: images/ added
  * siduxcc_hermes: .desktop: siduxcc-hermes -> Hermes (upgrade sentinel)
  * siduxcc_info: .desktop: SysInfo -> System Info